Majority of the project is completed